# xrandroll

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  main.py  main.ui  monitor_item.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: tests.yml
tests/: conftest.py  test_monitor.py  test_xrandr.py
tests/fixtures/: disabled_monitor.txt  fisa_sample.txt  monitor_1.txt  replicated.txt  sample_1.txt
xrandroll/: __main__.py  main.py  monitor.py  monitor_item.py  xrandr.py
