[tool.poetry]
name = "xrandroll"
version = "0.1.2"
description = "A powertool to configure your display"
authors = ["Roberto Alsina <roberto.alsina@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ralsina/xrandroll"
packages = [
    { include = "xrandroll" }
]

[tool.poetry.dependencies]
pyside2 = ">5.14"
python = ">3.6"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
xrandroll = 'xrandroll:main'
