[tool.poetry]
name = "xrandroll"
version = "0.1.6"
description = "A powertool to configure your display"
authors = ["Roberto Alsina <roberto.alsina@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ralsina/xrandroll"
packages = [
    { include = "xrandroll" }
]

[tool.poetry.dependencies]
pyside2 = ">5.14"
python = ">=3.7,<3.11"
pyedid = ">=0.1"
parse = ">1.0"


[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-fixtures = "^0.1.0"
pre-commit = "^2.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
xrandroll = 'xrandroll:main'
